[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vnegnn"
version = "0.1.0"

[tool.ruff]
line-length = 99 

[tool.mypy]
files = ["src", "train.py"]
no_implicit_optional = true
check_untyped_defs = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
packages = { find = { where = ["src"] } }
